--- a/plantuml/docker-compose.yml
+++ b/plantuml/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.3'
 services:
   plantuml-server:
     image: plantuml/plantuml-server:jetty
-    container-name: plantumlserver
+    container_name: plantumlserver
     ports:
       - 8090:8080
     restart: unless-stopped
