--- a/filebrowser/env.example
+++ b/filebrowser/env.example
@@ -1,6 +1,6 @@
 # Location where you want the config files to be stored locally
 DATA_DIR=/wherever/you/have/data
-CONFIG_DIR = /wherever/you/have/config
+CONFIG_DIR=/wherever/you/have/config
 
 # Define what user should run this
 # Obtain the details by running `id {username of user you want to use}`
