correct service name for it-tools

--- a/it-tools/docker-compose.yml
+++ b/it-tools/docker-compose.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  stirling-pdf:
+  it-tools:
     image: corentinth/it-tools:latest
     ports:
       - ${PORT:-8300}:8080
