correct wrong syntax for huginn

--- a/huginn/docker-compose.yml
+++ b/huginn/docker-compose.yml
@@ -8,5 +8,5 @@ services:
     volumes:
       - ${LOCAL_LOCATION}:/var/lib/mysql
     environment:
-      - SCHEDULER_FREQUENCY: 0.5
-      - TIMEZONE: ${LOCAL_TIMEZONE:-Brisbane}
+      - SCHEDULER_FREQUENCY=0.5
+      - TIMEZONE=${LOCAL_TIMEZONE:-Brisbane}
