--- a/stirlingpdf/docker-compose.yml
+++ b/stirlingpdf/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
   stirling-pdf:
-    image: frooodle/s-pdf
+    image: frooodle/s-pdf:latest
     ports:
       - ${PORT}:8080
     volumes:
