--- a/grocy/docker-compose.yml
+++ b/grocy/docker-compose.yml
@@ -2,7 +2,7 @@
 version: "3.8"
 services:
   grocy:
-    image: lscr.io/linuxserver/grocy:latest
+    image: lscr.io/linuxserver/grocy:4.0.0
     container_name: grocy
     environment:
       - PUID=${PUID}
