Change location of config.json
change it so that it can be in a separate directory altogether

--- a/utils/config.json.example
+++ b/utils/config.json.example
@@ -15,5 +15,6 @@
     ],
     "templates_root_directory": "absolute path to where the docker-compose-templates is",
     "volumes_root_directory": "absolute path to where the volumes are",
-    "backup_root_directory": "absolute path to where the backups are held"
+    "backup_root_directory": "absolute path to where the backups are held",
+    "system": "windows or linux"
 }
