--- a/stirlingpdf/docker-compose.yml
+++ b/stirlingpdf/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   stirling-pdf:
-    image: frooodle/s-pdf:latest
+    image: stirlingtools/stirling-pdf:latest
     ports:
       - ${PORT}:8080
     volumes:
